# billing-sdk-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
docs/: protocol.md
src/: client.rs  error.rs  gate.rs  lib.rs  license.rs  lifecycle.rs  loopback.rs  oauth.rs  signature.rs  types.rs  usage.rs
src/desktop/: auth.rs  browser.rs  cipher.rs  config.rs  fingerprint.rs  keyring.rs  keystore.rs  mod.rs  session.rs  snapshot.rs
tests/: gate.rs  license.rs  lifecycle.rs  oauth.rs  signature.rs  usage.rs
tests/fixtures/: signature-vectors.json
