[package]
name = "akira-billing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Go-Rust parity SDK for the Akira Billing API"
repository = "https://github.com/akira-io/billing-sdk-rust"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
