[package]
name = "akira-billing"
version = "0.3.6"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Go-Rust parity SDK for the Akira Billing API"
repository = "https://github.com/akira-io/billing-sdk-rust"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
ed25519-dalek = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "net", "io-util"], optional = true }
url = { version = "2", optional = true }
keyring = { version = "3", optional = true }
machine-uid = { version = "0.5", optional = true }
aes-gcm = { version = "0.10", optional = true }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
loopback = ["desktop", "tokio", "dep:url"]
desktop = ["dep:keyring", "dep:machine-uid", "dep:aes-gcm"]
